--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -86,8 +86,8 @@
 @import "components/sending-link";
 @import "components/help-buyer";
 @import "components/how-issue";
-@import "components/advantage-bayres";
-@import "components/cost-bayres";
+@import "components/advantage-buyers";
+@import "components/cost-buyers";
 @import "components/list-stores";
 @import "components/disclaimer";
 
