завершена верстка текстовой части всех блоков

--- a/src/scss/typography/_colors.scss
+++ b/src/scss/typography/_colors.scss
@@ -1,6 +1,10 @@
 .blue {
   color: $blue;
 
+  &--bold {
+    font-weight: 700;
+  }
+
   &--white-bg {
     position: relative;
     display: inline-block;
@@ -47,4 +51,8 @@
       }
     }
   }
+}
+
+.black {
+  font-weight: 700;
 }
