--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -71,9 +71,11 @@ $purple: #616d99;
 $purple2: #D6D5FF;
 $grey-dark: #282828;
 $grey-extra-light: #fafafa;
+$grey-extra-light2: #F2F2F2;
 $grey-light: #bfbfbf;
 $grey-light-1: #c1c1c1;
 $grey-light-2: #99a2c5;
 $grey-medium: #808080;
 $grey-medium-1: #808181;
 $grey-special: #5d5d5d;
+
