--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -90,7 +90,12 @@
 @import "components/cost-buyers";
 @import "components/list-stores";
 @import "components/disclaimer";
-
+@import "components/reviews-general";
+@import "components/paid-reviews-text";
+@import "components/paid-reviews";
+@import "components/submit-review";
+@import "components/reviews-subscribe";
+@import "components/review-examples";
 // @import "components/notification";
 // @import "components/new-banner";
 // @import "components/place-parcel";
