--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -96,6 +96,7 @@
 @import "components/submit-review";
 @import "components/reviews-subscribe";
 @import "components/review-examples";
+@import "components/paid-reviews-list";
 // @import "components/notification";
 // @import "components/new-banner";
 // @import "components/place-parcel";
