--- a/src/scss/components/_paid-reviews-text.scss
+++ b/src/scss/components/_paid-reviews-text.scss
@@ -2,4 +2,9 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 25px;
+
+  @include media-breakpoint-up(lg) {
+    font-size: 16px;
+    line-height: 29px;
+  }
 }
